[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
ureq = "2.3.1"
serde_json = "1.0.72"
serde = { version = "1.0.131", features = ["derive"] }
thiserror = "1.0.30"
dotenv = "0.15.0"